# Ejem1-Project

./: .gitignore  CLAUDE.md  README.md  SPEC-API.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/rules/: api.md  code-style-python.md  testing.md
src/ejem1/: __init__.py  database.py  main.py  models.py  schemas.py  validators.py
src/ejem1/routers/: __init__.py  authors.py  books.py
src/ejem1/services/: __init__.py  author_service.py  book_service.py
tests/: __init__.py  conftest.py  test_authors.py  test_books.py  test_main.py
