[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ejem1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ejem1 = "ejem1.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
